# ffi-demo

./: pubspec.yaml  test.db
lib/: main.dart  testlibrary.dart
linux/: my_application.cc
test_library/: CMakeLists.txt  test.c  test.def  test.h  test_test
